Add version number to package name to avoid issues with PPA

--- a/debian/rules
+++ b/debian/rules
@@ -21,12 +21,12 @@ override_dh_auto_clean:
 override_dh_auto_install:
 	set -ex; \
 	for python in $(PYVERS); do \
-		$$python setup.py install --skip-build --root debian/python-elasticsearch \
+		$$python setup.py install --skip-build --root debian/python-elasticsearch-0.4 \
 			--install-layout=deb; \
 	done
 
 	set -ex; \
 	for python in $(PY3VERS); do \
-		$$python setup.py install --skip-build --root debian/python3-elasticsearch \
+		$$python setup.py install --skip-build --root debian/python3-elasticsearch-0.4 \
 			--install-layout=deb; \
 	done
